2013-01-01: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Archive.[h|m] new method, to allow specify working directory
	  when unarchiving
	* ArjArchive.[h|m], ZooArchive.[h|m] Use the new method to
	  specify the working directory instead of using chdir(2)
	* Redirect output from archiver programs to a pipe, unarj
	  doesn't have a parameter to suppress output when extracting

2012-12-31: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ArchiveService.[h|m], ZipperInfo.plist, ZooArchive.[h|m]
	* Make Zoo archive extraction work, add service to create
	  zoo archives
	* FileInfo.m fix description method
	* ZooArchive.m Make creation of zoo archives work
	* RarArchive.m NSArray count returns NSUInteger, not int
	* ArjArchive.[h|m] add them, and make watching contents and
	  extraction work unsing unarj
	* ZipperInfo.plist, Archive.m AppDelegate.m add ArjArchive hooks

2012-12-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* *Archive.m Archive.[h|m], new common.h, *Archive.[h|m],
	  ArchiveService.[h|m], GNUmakefile define and use typedef enum 
	  ArchiveType for the different archive types.
	* ZipperInfo.plist, ArchiveService.[h|m], service to create
	  tar, and .tar.xz archives
	* TarArchive.m, ArchiveService.m, use a NSRunAlertPanel instead
	  of NSLog to tell the user about problems.
	* PreferencesController.[h|m], Preferences.[h|m], 
	  Resouces/Preferences.gorm, start adding support for more archivers
	* ZooArchive.[h|m], AppDelegate.m, GNUmakefile initial support for 
	  ZOO archives

2012-12-24: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ZipArchive.m remove a bogus check, and fix comment
	* ArchiveService.[h|m], ZipperInfo.plist, LhaArchive.[h|m]
	  Add creation of LHA Archives
	* SevenZipArchive.[h|m], ZipperInfo.plist, ArchiveService.[h|m]
	  Add creation of 7z Archives

2012-12-23: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ArchiveService.[h|m], TarArchive.[h|m]